# app/learn/api/learn/v1/learn_grpc.pb.go
@@ -20,17 +20,18 @@ import (
 const _ = grpc.SupportPackageIsVersion9
 
 const (
-	LearnService_Ping_FullMethodName = "/puchi.learn.v1.LearnService/Ping"
+	LearnService_Ping_FullMethodName               = "/puchi.learn.v1.LearnService/Ping"
+	LearnService_CreateGuestSession_FullMethodName = "/puchi.learn.v1.LearnService/CreateGuestSession"
+	LearnService_ClaimGuest_FullMethodName         = "/puchi.learn.v1.LearnService/ClaimGuest"
 )
 
 // LearnServiceClient is the client API for LearnService service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
-//
-// LearnService is an empty scaffold. Curriculum and guest-progress RPCs are
-// added in later tasks of the learn-service reorg.
 type LearnServiceClient interface {
 	Ping(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	CreateGuestSession(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GuestSession, error)
+	ClaimGuest(ctx context.Context, in *ClaimGuestRequest, opts ...grpc.CallOption) (*ClaimGuestResponse, error)
 }
 
 type learnServiceClient struct {
@@ -51,14 +52,33 @@ func (c *learnServiceClient) Ping(ctx context.Context, in *emptypb.Empty, opts .
 	return out, nil
 }
 
+func (c *learnServiceClient) CreateGuestSession(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*GuestSession, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(GuestSession)
+	err := c.cc.Invoke(ctx, LearnService_CreateGuestSession_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *learnServiceClient) ClaimGuest(ctx context.Context, in *ClaimGuestRequest, opts ...grpc.CallOption) (*ClaimGuestResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ClaimGuestResponse)
+	err := c.cc.Invoke(ctx, LearnService_ClaimGuest_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // LearnServiceServer is the server API for LearnService service.
 // All implementations must embed UnimplementedLearnServiceServer
 // for forward compatibility.
-//
-// LearnService is an empty scaffold. Curriculum and guest-progress RPCs are
-// added in later tasks of the learn-service reorg.
 type LearnServiceServer interface {
 	Ping(context.Context, *emptypb.Empty) (*emptypb.Empty, error)
+	CreateGuestSession(context.Context, *emptypb.Empty) (*GuestSession, error)
+	ClaimGuest(context.Context, *ClaimGuestRequest) (*ClaimGuestResponse, error)
 	mustEmbedUnimplementedLearnServiceServer()
 }
 
@@ -71,6 +91,12 @@ type UnimplementedLearnServiceServer struct{}
 
 func (UnimplementedLearnServiceServer) Ping(context.Context, *emptypb.Empty) (*emptypb.Empty, error) {
 	return nil, status.Error(codes.Unimplemented, "method Ping not implemented")
+}
+func (UnimplementedLearnServiceServer) CreateGuestSession(context.Context, *emptypb.Empty) (*GuestSession, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateGuestSession not implemented")
+}
+func (UnimplementedLearnServiceServer) ClaimGuest(context.Context, *ClaimGuestRequest) (*ClaimGuestResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ClaimGuest not implemented")
 }
 func (UnimplementedLearnServiceServer) mustEmbedUnimplementedLearnServiceServer() {}
 func (UnimplementedLearnServiceServer) testEmbeddedByValue()                      {}
@@ -111,6 +137,42 @@ func _LearnService_Ping_Handler(srv interface{}, ctx context.Context, dec func(i
 	return interceptor(ctx, in, info, handler)
 }
 
+func _LearnService_CreateGuestSession_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(emptypb.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(LearnServiceServer).CreateGuestSession(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: LearnService_CreateGuestSession_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(LearnServiceServer).CreateGuestSession(ctx, req.(*emptypb.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _LearnService_ClaimGuest_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ClaimGuestRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(LearnServiceServer).ClaimGuest(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: LearnService_ClaimGuest_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(LearnServiceServer).ClaimGuest(ctx, req.(*ClaimGuestRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // LearnService_ServiceDesc is the grpc.ServiceDesc for LearnService service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -121,6 +183,14 @@ var LearnService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Ping",
 			Handler:    _LearnService_Ping_Handler,
+		},
+		{
+			MethodName: "CreateGuestSession",
+			Handler:    _LearnService_CreateGuestSession_Handler,
+		},
+		{
+			MethodName: "ClaimGuest",
+			Handler:    _LearnService_ClaimGuest_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
